migrate csdl util to emitters Signed-off-by: dbulahov <bulahovdenis@gmail.com>